(copy_files (files %{project_root}/extension/{extension,extension2}.zip))
(rule (action (copy %{project_root}/extension/dict.gen.csv erofa.csv)))
(rule (action (copy %{project_root}/extension/dict1990.gen.csv rect1990.csv)))
(copy_files (files ../client/{*.js,*.html}))
(copy_files (files %{project_root}/data/lexique/Lexique383.gen.tsv))
(copy_files (files %{project_root}/dict-gen/browser/dict_gen_browser.bc.js))
(copy_files (files %{project_root}/doc-conversion/bin/*.bc.js))
(copy_files (files %{project_root}/extension/src/{{rewrite,dict}.js,rules-format.html}))
(copy_files (files %{project_root}/keyboard/*.{zip,dict}))
(copy_files (files %{project_root}/edition/{Alice_au_pays_des_merveilles.epub,Alice_au_pays_des_merveilles-manual.epub}))

(rule
  (target dict.js.gz)
  (action  (run gzip -f -n -k %{dep:dict.js})))
(rule
  (target dict_gen_browser.bc.js.gz)
  (action  (run gzip -f -n -k %{dep:dict_gen_browser.bc.js})))
(rule
  (target doc_conversion.bc.js.gz)
  (action  (run gzip -f -n -k %{dep:doc_conversion.bc.js})))
(rule
  (target ortografe.bc.js.gz)
  (action  (run gzip -f -n -k %{dep:ortografe.bc.js})))
(rule
  (target Lexique383.gen.tsv.gz)
  (action  (run gzip -f -n -k %{dep:Lexique383.gen.tsv})))

(copy_files (files %{project_root}/doc-conversion/bin/ortografe_cli.exe))
(copy_files (files %{project_root}/erofa-texte.pdf))

(rule
 (target books.tar)
 (deps
  (sandbox always)
  (glob_files books_local.tar))
 (action
  ;; wikisource heavily throttles downloads. So we cache the books on the server, such
  ;; that builds from scratch just work. It also has the advantage of ensuring the data
  ;; is fixed instead of evolving depending on when you downloaded.
   (bash "
set -e -u -o pipefail
if [ -f books_local.tar ]; then
  cp books_local.tar %{target}
else
  curl --fail-with-body -o %{target} -sS https://orthographe-rationnelle.info/static/books.tar
fi")))

(rule
 (target orthographe-qui-a-peur-de-la-reforme.epub)
 (deps
  (sandbox always)
  (glob_files orthographe-qui-a-peur-de-la-reforme_local.epub))
 (action
  ;; This epub is technically freely available, but you still need an account
  ;; some library website to get it, so store it and distribute it ourselves to
  ;; remove the annoying hoops.
   (bash "
set -e -u -o pipefail
if [ -f orthographe-qui-a-peur-de-la-reforme_local.epub ]; then
  cp orthographe-qui-a-peur-de-la-reforme_local.epub %{target}
else
  curl --fail-with-body -o %{target} -sS https://orthographe-rationnelle.info/static/orthographe-qui-a-peur-de-la-reforme.epub
fi")))

(rule
 (targets (dir books) books.html)
 (deps    (sandbox always))
 (action (run ../build/build.exe convert-all %{dep:books.tar})))

(rule
 (targets erofa-texte.pdf)
 (deps %{project_root}/OA-dictionnaire-EROFA.pdf)
 (action
  (run qpdf %{project_root}/OA-dictionnaire-EROFA.pdf --pages . 1-78,521-523 -- erofa-texte.pdf)))

(copy_files (files %{project_root}/data/wiktionnaire/min.gen.csv.zst))

(copy_files
 (files %{project_root}/extension/store-page/screenshot-1280-800.png))
(rule (action (copy %{project_root}/extension/apple/create apple-create)))
(rule (action (copy %{project_root}/extension/apple/manual.diff manual.diff)))

(rule
 (target chrome.svg)
 (action
   ;; licence is public domain, so nothing more to do
   (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/e/e1/Google_Chrome_icon_%28February_2022%29.svg")))

(rule
 (target firefox.svg)
 (action
  ;; licence is MPL2, although I don't understand what it requires
  ;; since it's talking about source code
  (run curl -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/a/a0/Firefox_logo%2C_2019.svg")))

;; public domain
(rule
 (target safari.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/5/52/Safari_browser_logo.svg")))

;; MIT
(rule
 (target edge.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/f/f6/Edge_Logo_2019.svg")))

;; MPL2, same as firefox
(rule
 (target thunderbird.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/2/2f/Thunderbird_2023_icon.svg")))

;; https://creativecommons.org/licenses/by-sa/3.0/deed.en
(rule
 (target pdf.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/e/ec/Pdf_by_mimooh.svg")))

;; public domain
(rule
 (target epub.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/f/f2/Epub_logo_color.svg")))

;; public domain
(rule
 (target word.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/f/fd/Microsoft_Office_Word_%282019%E2%80%93present%29.svg")))
(rule
 (target powerpoint.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/0/0d/Microsoft_Office_PowerPoint_%282019%E2%80%93present%29.svg")))

;; https://creativecommons.org/licenses/by-sa/4.0/deed.en
;; should be fine with link + note at the bottom
(rule
 (target libreoffice_writer.png)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/4/45/LibreOffice_7.5_Writer_Icon.png")))

;; https://creativecommons.org/licenses/by-sa/3.0/deed.en
(rule
 (target text_file.svg)
 (action
   (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/2/23/Text-txt.svg")))

;; LGPL again
(rule
 (target internet_globe.svg)
 (action
   (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/f/f9/Crystal_Clear_app_linneighborhood.svg")))

;; will point to youtube video, so no issue of license here
(rule
 (target hoedt_piron.jpg)
 (action
   (run curl --fail-with-body -o %{target} -sS "https://img.youtube.com/vi/5YO7Vg1ByA8/mqdefault.jpg")))
